--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.12.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
