--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
 
   "compilerOptions": {
     "lib": ["es2023"],
-    "module": "node16",
+    "module": "ES2022",
     "target": "es2022",
 
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "Node"
   },
 
   "extends": "@tsconfig/node21/tsconfig.json",
