--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src --format esm",
     "start": "node dist/server.mjs",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@tsconfig/node21": "^21.0.3",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^20.12.2",
     "@types/uuid": "^9.0.8",
     "prisma": "^5.12.0",
@@ -33,6 +35,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
+    "nanoid": "^5.0.6",
     "zod": "^3.22.4"
   }
 }
