--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,20 @@
   "_version": "21.0.0",
 
   "compilerOptions": {
-    "lib": ["es2023"],
-    "module": "ES2022",
-    "target": "es2022",
-
-    "strict": true,
+    "target": "es2016",
+    "lib": ["ES2020"],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "outDir": "dist",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "moduleResolution": "Node"
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
   },
 
   "extends": "@tsconfig/node21/tsconfig.json",
 
-  "include": ["src", "src/routes/homeRoute.ts", "src/routes/indexRoute.ts"]
+  "include": ["src"]
 }
