--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "devDependencies": {
     "@tsconfig/node21": "^21.0.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.12.2",
     "@types/uuid": "^9.0.8",
-    "prisma": "^5.12.0",
+    "prisma": "^5.12.1",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
@@ -31,7 +32,8 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
-    "@prisma/client": "^5.12.0",
+    "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
